--- a/public/account.html
+++ b/public/account.html
@@ -73,7 +73,9 @@
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+      <script src='/js/config.js'></script>
       <script src="/js/app.js"></script>
+    
       <script>
         $(document).ready(function () {
           refreshFileList();
