--- a/public/account.html
+++ b/public/account.html
@@ -13,13 +13,13 @@
 <body>
   <header>
       <h1 class='title'>FoodShare</h1>
-      <h3 class='title'>Welcome ---User---!</h3>
+      <h3 class='title'>Welcome ---User---!</h3>     <!-- will add for the future to reflect the user logged in -->
   </header>
 
 
   <div id="myAccount">
     <div class="add">
-      <h2>Add Your Food</h2>
+      <h2>Add Your Food</h2>          <!-- ability to add new food -->
         <form id="add-file-form">
           <div id="form-container">
           <input type="hidden" id="file-id" value="" />
@@ -45,15 +45,15 @@
         </form>
     </div>
 
-    <div class="edit">
+    <div class="edit">                              <!-- edit food already entered -->
       <h2>Edit or Delete Your Food</h2>
-      <div id="list-container"></div>
+      <div id="list-container"></div>               <!-- section where list is loaded from db will be tailored to user eventually -->
     </div>
   </div>
 
       <div id="modal"></div>
 
-      <div class="available">
+      <div class="available">                       <!-- list of all food in db via dataTables-->
         <h2>Food Available</h2>
           <table id="example" class="responsive display" style="width:100%">
             <thead>
