--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="slick/slick.css"/>           <!-- slick slider plugin css -->
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>     <!-- slick slider plugin css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
   <title>Food Share</title>
 </head>
